--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
       <div class="header__inner">
         <!-- 카테고리 버튼은 .header__inner 영역 안에 마크업 해주세요. -->
         <button class="button--category">
+          <svg
+            width="30"
+            height="30"
+            viewBox="0 0 30 30"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M30 6H0V0H30V6Z" fill="white" />
+            <path d="M30 18H0V12H30V18Z" fill="white" />
+            <path d="M0 30H30V24H0V30Z" fill="white" />
+          </svg>
+
           <span>카테고리</span>
         </button>
       </div>
@@ -37,8 +49,24 @@
       <div class="navigation__inner">
         <!-- 카테고리별 내비게이션(메뉴) 영역 -->
         <ul class="navigation__list one-depth">
-          <li><i class="icon-clothes"></i>패션의류/잡화</li>
-          <li><i class="icon-beauty"></i>뷰티</li>
+          <li>
+            <a class="one-depth-link" href="/" role="button">
+              <i class="icon-clothes"></i><span>패션의류/잡화</span>
+            </a>
+            <ul class="two-depth">
+              <li>
+                <a class="two-depth-link" href="/" role="button">여성패션</a>
+                <ul class="three-depth">
+                  <li><a class="three-depth-link" href="/">의류</a></li>
+                  <li><a class="three-depth-link" href="/">속옷/잠옷</a></li>
+                  <li><a class="three-depth-link" href="/">신발</a></li>
+                </ul>
+              </li>
+              <li><a>남성패션</a></li>
+              <li><a>유아동패션</a></li>
+            </ul>
+          </li>
+          <li><i class="icon icon-beauty"></i>뷰티</li>
           <li><i class="icon-baby"></i>출산유아동</li>
           <li><i class="icon-foods"></i>식품</li>
           <li><i class="icon-kitchenware"></i>주방용품</li>
@@ -52,7 +80,13 @@
           <li><i class="icon-stationery"></i>문구오피스</li>
           <li><i class="icon-pet"></i>반려동물</li>
           <li><i class="icon-travel"></i>여행티켓</li>
-          <li><i class="icon-theme"></i>테마관</li>
+          <li>
+            <i class="icon-theme"></i>테마관<img
+              class="theme-new"
+              src="/assets/icon/new.svg"
+              alt="new"
+            />
+          </li>
         </ul>
       </div>
     </nav>
