--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             <path d="M30 18H0V12H30V18Z" fill="white" />
             <path d="M0 30H30V24H0V30Z" fill="white" />
           </svg>
-
           <span>카테고리</span>
         </button>
       </div>
@@ -51,41 +50,74 @@
         <ul class="navigation__list one-depth">
           <li>
             <a class="one-depth-link" href="/" role="button">
-              <i class="icon-clothes"></i><span>패션의류/잡화</span>
+              <i class="icon-clothes"></i>
+              패션의류/잡화
             </a>
+
             <ul class="two-depth">
               <li>
                 <a class="two-depth-link" href="/" role="button">여성패션</a>
+
                 <ul class="three-depth">
                   <li><a class="three-depth-link" href="/">의류</a></li>
                   <li><a class="three-depth-link" href="/">속옷/잠옷</a></li>
                   <li><a class="three-depth-link" href="/">신발</a></li>
                 </ul>
               </li>
-              <li><a>남성패션</a></li>
-              <li><a>유아동패션</a></li>
+              <li><a href="/">남성패션</a></li>
+              <li><a href="/">유아동패션</a></li>
             </ul>
           </li>
-          <li><i class="icon icon-beauty"></i>뷰티</li>
-          <li><i class="icon-baby"></i>출산유아동</li>
-          <li><i class="icon-foods"></i>식품</li>
-          <li><i class="icon-kitchenware"></i>주방용품</li>
-          <li><i class="icon-houseware"></i>생활용품</li>
-          <li><i class="icon-interior"></i>홈인테리어</li>
-          <li><i class="icon-appliances"></i>가전디지털</li>
-          <li><i class="icon-sports"></i>스포츠</li>
-          <li><i class="icon-car"></i>자동차용품</li>
-          <li><i class="icon-book"></i>도서음반</li>
-          <li><i class="icon-toy"></i>완구취미</li>
-          <li><i class="icon-stationery"></i>문구오피스</li>
-          <li><i class="icon-pet"></i>반려동물</li>
-          <li><i class="icon-travel"></i>여행티켓</li>
           <li>
-            <i class="icon-theme"></i>테마관<img
-              class="theme-new"
-              src="/assets/icon/new.svg"
-              alt="new"
-            />
+            <a href="/"><i class="icon-beauty"></i>뷰티</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-baby"></i>출산유아동</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-foods"></i>식품</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-kitchenware"></i>주방용품</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-houseware"></i>생활용품</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-interior"></i>홈인테리어</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-appliances"></i>가전디지털</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-sports"></i>스포츠</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-car"></i>자동차용품</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-book"></i>도서음반</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-toy"></i>완구취미</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-stationery"></i>문구오피스</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-pet"></i>반려동물</a>
+          </li>
+          <li>
+            <a href="/"><i class="icon-travel"></i>여행티켓</a>
+          </li>
+          <li class="theme">
+            <a href="/">
+              <i class="icon-theme"></i>테마관<img
+                class="theme-new"
+                src="/assets/icon/new.svg"
+                alt="new"
+              />
+            </a>
           </li>
         </ul>
       </div>
