--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
       <div class="navigation__inner">
         <!-- 카테고리별 내비게이션(메뉴) 영역 -->
         <ul class="navigation__list one-depth">
-          <li>
+          <li class="fashion">
             <a class="one-depth-link" href="/" role="button">
-              <i class="icon-clothes"></i>
-              패션의류/잡화
-            </a>
+              <i class="icon-clothes"></i><span>패션의류/잡화</span></a
+            >
 
             <ul class="two-depth">
               <li>
@@ -60,8 +59,8 @@
 
                 <ul class="three-depth">
                   <li><a class="three-depth-link" href="/">의류</a></li>
-                  <li><a class="three-depth-link" href="/">속옷/잠옷</a></li>
-                  <li><a class="three-depth-link" href="/">신발</a></li>
+                  <li><a href="/">속옷/잠옷</a></li>
+                  <li><a href="/">신발</a></li>
                 </ul>
               </li>
               <li><a href="/">남성패션</a></li>
