--- a/index.html
+++ b/index.html
@@ -55,16 +55,28 @@
 
             <ul class="two-depth">
               <li>
-                <a class="two-depth-link" href="/" role="button">여성패션</a>
+                <a class="two-depth-link" href="/" role="button"
+                  ><span>여성패션</span></a
+                >
 
                 <ul class="three-depth">
-                  <li><a class="three-depth-link" href="/">의류</a></li>
-                  <li><a href="/">속옷/잠옷</a></li>
-                  <li><a href="/">신발</a></li>
+                  <li>
+                    <a class="three-depth-link" href="/"><span>의류</span></a>
+                  </li>
+                  <li>
+                    <a href="/"><span>속옷/잠옷</span></a>
+                  </li>
+                  <li>
+                    <a href="/"><span>신발</span></a>
+                  </li>
                 </ul>
               </li>
-              <li><a href="/">남성패션</a></li>
-              <li><a href="/">유아동패션</a></li>
+              <li>
+                <a href="/"><span>남성패션</span></a>
+              </li>
+              <li>
+                <a href="/"><span>유아동패션</span></a>
+              </li>
             </ul>
           </li>
           <li>
@@ -174,6 +186,7 @@
           <div class="information-2">
             <div class="customer">
               <div>365고객센터</div>
+              <div class="border-for-divider"></div>
               <div>전자금융거래분쟁처리담당</div>
             </div>
 
