--- a/index.html
+++ b/index.html
@@ -80,54 +80,57 @@
             </ul>
           </li>
           <li>
-            <a href="/"><i class="icon-beauty"></i>뷰티</a>
+            <a href="/"><i class="icon-beauty"></i><span>뷰티</span></a>
           </li>
           <li>
-            <a href="/"><i class="icon-baby"></i>출산유아동</a>
+            <a href="/"><i class="icon-baby"></i><span>출산유아동</span></a>
           </li>
           <li>
-            <a href="/"><i class="icon-foods"></i>식품</a>
+            <a href="/"><i class="icon-foods"></i><span>식품</span></a>
           </li>
           <li>
-            <a href="/"><i class="icon-kitchenware"></i>주방용품</a>
+            <a href="/"
+              ><i class="icon-kitchenware"></i><span>주방용품</span></a
+            >
           </li>
           <li>
-            <a href="/"><i class="icon-houseware"></i>생활용품</a>
+            <a href="/"><i class="icon-houseware"></i><span>생활용품</span></a>
           </li>
           <li>
-            <a href="/"><i class="icon-interior"></i>홈인테리어</a>
+            <a href="/"><i class="icon-interior"></i><span>홈인테리어</span></a>
           </li>
           <li>
-            <a href="/"><i class="icon-appliances"></i>가전디지털</a>
+            <a href="/"
+              ><i class="icon-appliances"></i><span>가전디지털</span></a
+            >
           </li>
           <li>
-            <a href="/"><i class="icon-sports"></i>스포츠</a>
+            <a href="/"><i class="icon-sports"></i><span>스포츠</span></a>
           </li>
           <li>
-            <a href="/"><i class="icon-car"></i>자동차용품</a>
+            <a href="/"><i class="icon-car"></i><span>자동차용품</span></a>
           </li>
           <li>
-            <a href="/"><i class="icon-book"></i>도서음반</a>
+            <a href="/"><i class="icon-book"></i><span>도서음반</span></a>
           </li>
           <li>
-            <a href="/"><i class="icon-toy"></i>완구취미</a>
+            <a href="/"><i class="icon-toy"></i><span>완구취미</span></a>
           </li>
           <li>
-            <a href="/"><i class="icon-stationery"></i>문구오피스</a>
+            <a href="/"
+              ><i class="icon-stationery"></i><span>문구오피스</span></a
+            >
           </li>
           <li>
-            <a href="/"><i class="icon-pet"></i>반려동물</a>
+            <a href="/"><i class="icon-pet"></i><span>반려동물</span></a>
           </li>
           <li>
-            <a href="/"><i class="icon-travel"></i>여행티켓</a>
+            <a href="/"><i class="icon-travel"></i><span>여행티켓</span></a>
           </li>
           <li class="theme">
             <a href="/">
-              <i class="icon-theme"></i>테마관<img
-                class="theme-new"
-                src="/assets/icon/new.svg"
-                alt="new"
-              />
+              <i class="icon-theme"></i><span>테마관</span
+              ><img class="theme-new" src="/assets/icon/new.svg" alt="new" />
             </a>
           </li>
         </ul>
