--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/stylesheets/main.css" />
-    <link rel="stylesheet" href="/icon-font-generator/css/fontello.css" />
+    <link rel="stylesheet" href="/icon-font/css/fontello.css" />
     <script type="module" src="./js/main.js"></script>
   </head>
 
