--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1 class="sr-only">Coupang</h1>
       <div class="header__inner">
         <!-- 카테고리 버튼은 .header__inner 영역 안에 마크업 해주세요. -->
-        <button class="button--category">
+        <button class="button--category" type="button">
           <svg
             width="30"
             height="30"
@@ -245,7 +245,7 @@
               <a
                 href="https://www.facebook.com"
                 target="_blank"
-                rel="noopener noreferrer"
+                rel="noopener noreferrer nofollow"
               >
                 <img src="/assets/icon/sns-facebook.svg" alt="sns-facebook" />
               </a>
@@ -254,7 +254,7 @@
               <a
                 href="https://section.blog.naver.com"
                 target="_blank"
-                rel="noopener noreferrer"
+                rel="noopener noreferrer nofollow"
               >
                 <img
                   src="/assets/icon/sns-naver-blog.svg"
@@ -266,7 +266,7 @@
               <a
                 href="https://www.instagram.com"
                 target="_blank"
-                rel="noopener noreferrer"
+                rel="noopener noreferrer nofollow"
               >
                 <img src="/assets/icon/sns-instagram.svg" alt="sns-instagram" />
               </a>
