--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
   </head>
 
   <body>
-    <header class="header">
+    <header>
       <!-- 헤더 영역 -->
-      <!-- 대제목의 경우 "Coupang"으로 미리 마크업되어 있습니다. -->
       <h1 class="sr-only">Coupang</h1>
       <div class="header__inner">
-        <!-- 카테고리 버튼은 .header__inner 영역 안에 마크업 해주세요. -->
         <button class="button--category" type="button">
           <svg
             width="30"
@@ -41,10 +39,10 @@
       </div>
     </header>
 
-    <nav class="navigation">
+    <nav>
       <!-- 내비게이션 영역 -->
       <!-- 내비게이션 제목 -->
-      <h2>분류</h2>
+      <h2 class="sr-only">분류</h2>
       <div class="navigation__inner">
         <!-- 카테고리별 내비게이션(메뉴) 영역 -->
         <ul class="navigation__list one-depth">
@@ -139,12 +137,10 @@
 
     <main class="main">
       <!-- 메인 콘텐츠 영역 -->
-      <!-- 해당 영역은 추가적인 마크업없이 비워놓아 주세요. -->
     </main>
 
-    <footer class="footer">
+    <footer>
       <!-- 푸터 영역 -->
-      <!-- 푸터 관련 콘텐츠는 .footer 영역 안에 마크업 해주세요. -->
       <div class="guide-background">
         <div class="guide">
           <div class="guide-txt">인재채용</div>
